--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="moment.js"></script>
+  <script src="moment-timezone-with-data.js"></script>
 </html>
