--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,17 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+<!--    <link rel="stylesheet" type="text/css" href="/color.less"/>-->
+<!--    <script>-->
+<!--      window.less= {-->
+<!--        async: false,-->
+<!--        env:'production'-->
+<!--      };-->
+<!--    </script>-->
+<!--    <script type="text/javascript" src="https://cdn.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>-->
     <div id="root"></div>
+<!--    <script src="common.js"></script>-->
+<!--    <script src="index.js"></script>-->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
